# Bronco-Rustacean-Window-Manager

./: Cargo.toml  README.md  config.json  install.sh
src/: lib.rs  main.rs
src/config/: keybind.rs  mod.rs
src/wm/: actions.rs  event.rs  mod.rs  workspace.rs
