[package]
name = "brwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.11.0", features = ["all-extensions"] }
serde = "1.0.149"
serde_json = "1.0.87"
serde_derive = "1.0.149"
dirs-next = "2.0.0"
shlex = "1.1.0"